[tool.poetry]
name = "corners-model-performance-visualization"
version = "0.1.0"
description = "Visualisations of model performance. Specially for docu_sketch."
authors = ["Ilya Tampio <quakumei@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "corners_model_performance_visualization"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"
seaborn = "^0.12.2"
pandas = "^2.0.2"
black = {extras = ["jupyter"], version = "^23.3.0"}
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mdformat = "^0.7.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
